[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Nodes/Inputs.gd" type="Script" id=1]

[node name="GraphNode" type="GraphNode"]
margin_right = 32.0
margin_bottom = 30.0
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = true
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputAButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 38.0
margin_bottom = 44.0
text = "A"

[node name="InputBButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 45.0
margin_right = 38.0
margin_bottom = 65.0
text = "B"

[node name="InputCButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 66.0
margin_right = 38.0
margin_bottom = 86.0
text = "C"

[node name="InputDButton" type="Button" parent="."]
margin_left = 16.0
margin_top = 87.0
margin_right = 38.0
margin_bottom = 107.0
text = "D"
[connection signal="pressed" from="InputAButton" to="." method="_on_InputAButton_pressed"]
[connection signal="pressed" from="InputBButton" to="." method="_on_InputBButton_pressed"]
[connection signal="pressed" from="InputCButton" to="." method="_on_InputCButton_pressed"]
[connection signal="pressed" from="InputDButton" to="." method="_on_InputDButton_pressed"]
